# vamp-live

./: Makefile.in  README  configure  configure.ac  vamp-notes.md
host/: vamp-live-host.cpp
